--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Image Creator</title>
-    <meta name="description" content="An intuitive app to generate images using AI technology." />
+    <title>TomaAI - AI Image Generator</title>
+    <meta name="description" content="Transform your imagination into stunning visuals with our advanced AI technology. Create professional artwork, portraits, and designs in seconds." />
     <link rel="icon" type="image/png" href="/favicon-32x32.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/icon-192x192.png" />
