--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx?v=1.0.0"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
